fixing ul for loops and spacing in resume

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,3 +1,19 @@
+@media screen, print {
+    .main-content {
+        line-height: 1.4;
+    }
+
+    li {
+        margin: 0.5em 0;
+    }
+
+    .hangingindent {
+        padding-left: 1.5em ;
+        text-indent: -1.5em ;
+      }
+    
+}
+
 @media screen {
     .show-print {
         display: none;
